# ChangeLog for media-libs/sdl-image
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-image/ChangeLog,v 1.51 2009/04/30 15:12:37 mr_bones_ Exp $

  30 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  -files/sdl-image-1.2.6-DOS.patch, -sdl-image-1.2.6-r1.ebuild:
  clean out old files

  30 Apr 2009; Jeroen Roovers <jer@gentoo.org> sdl-image-1.2.7.ebuild:
  Stable for HPPA (bug #264906).

  26 Apr 2009; Brent Baude <ranger@gentoo.org> sdl-image-1.2.7.ebuild:
  stable ppc, bug 264906

  23 Apr 2009; Raúl Porcel <armin76@gentoo.org> sdl-image-1.2.7.ebuild:
  arm/ia64/sparc stable wrt #264906

  18 Apr 2009; Markus Meier <maekke@gentoo.org> sdl-image-1.2.7:
  amd64/x86 stable, bug #264906

  12 Apr 2009; Brent Baude <ranger@gentoo.org> sdl-image-1.2.7.ebuild:
  stable ppc64, bug 264906

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  sdl-image-1.2.7.ebuild:
  Stable on alpha, bug #264906

  04 Apr 2009; <solar@gentoo.org> sdl-image-1.2.7.ebuild:
  - Keyword ~arm

*sdl-image-1.2.7 (27 Nov 2008)

  27 Nov 2008; Mike Frysinger <vapier@gentoo.org> +sdl-image-1.2.7.ebuild:
  Version bump.

  29 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  sdl-image-1.2.6-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*sdl-image-1.2.6-r1 (29 Jan 2008)

  29 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/sdl-image-1.2.6-DOS.patch, -sdl-image-1.2.3-r1.ebuild,
  -sdl-image-1.2.4.ebuild, -sdl-image-1.2.5.ebuild,
  -sdl-image-1.2.5-r1.ebuild, -sdl-image-1.2.6.ebuild,
  +sdl-image-1.2.6-r1.ebuild:
  add patches from upstream to address security bug #207933; force stabilize all
  previously stable archs and remove older, vulnerable versions

*sdl-image-1.2.6 (21 Jul 2007)

  21 Jul 2007; Mike Frysinger <vapier@gentoo.org> +sdl-image-1.2.6.ebuild:
  Version bump.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  sdl-image-1.2.3-r1.ebuild: