@@ -1,4 +1,4 @@
 DIST SDL_image-1.2.7.tar.gz 1315517 RMD160 d54233077c0a49f075bf11dc1cc2cfe7c0a64efa SHA1 0cffd05e41014651e7114d7fea309c9f37ef2d8a SHA256 14e4d9932ae2af03d814cca9e56ab9ba0091ffe06c9387dde74dfb03a4dde3b3
-EBUILD sdl-image-1.2.7.ebuild 1198 RMD160 be3467849e858ba01a760fbb3745b1d3af9be845 SHA1 fb2a3a04d96046506c3c37c99269bd917e622ffd SHA256 c5b175e2ccacdd8c0333d3e5175448de2814209baa940b990e2207c6315bb6f6
-MISC ChangeLog 6552 RMD160 734b1c177ae73b6ec6b06630acb578e976144961 SHA1 6b1e891d63aa25c1406efa45164c4522e87b5132 SHA256 8ab7c4be662c5b10072a08484f6c28cd1f6f3c2e696e73ca7e4c7f5887e61470
+EBUILD sdl-image-1.2.7.ebuild 1206 RMD160 c767b1462608bce855f7f505d993cf13f810fa9a SHA1 ac30b0550d29be3d5125f1e1ed37dde71bacb9ed SHA256 02efbc7aca36ca9eeba1c9b87b463f9d1458abc8794012d81c3d2bcb1181951e
+MISC ChangeLog 6674 RMD160 9fec0b31104cbcd30d56b5ff8d35b7038a453268 SHA1 38560e633cf4c978645ecc8c4285bcce44b273ef SHA256 107ab1a51abf18d07e61dfd29c9bd2134f3cffb64439963d85adf4280afef7bb
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
